Add logging to help diagnose <webkit.org/b/209685> https://bugs.webkit.org/show_bug.cgi?id=209967

Reviewed by Darin Adler.

Source/WebCore:

Add logging to try and diagnose a handful of API test failures on iOS 13.4 test runners. The failures seem to
only reproduce in release builds on one particular bot; even then, the problem still doesn't reproduce when
running the API tests on this failing bot.

As such, add some logging to try and verify whether...
(1) the UI process is even attempting to update its supported item provider types, which should happen after
    each drag session update.
(2) WKContentView is receiving calls to update the drag session in the first place.

* platform/ios/WebItemProviderPasteboard.mm:
(-[WebItemProviderPasteboard updateSupportedTypeIdentifiers:]):

Source/WebKit:

See WebCore/ChangeLog.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView dropInteraction:sessionDidUpdate:]):


Canonical link: https://commits.webkit.org/222886@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259465 268f45cc-cd09-0410-ab3c-d52691b4dbfc