Source/WebCore/platform/ios/WebItemProviderPasteboard.mm
@@ -492,6 +492,7 @@ static UIPreferredPresentationStyle uiPreferredPresentationStyle(WebPreferredPre
 
 - (void)updateSupportedTypeIdentifiers:(NSArray<NSString *> *)types
 {
+    NSLog(@"%s => %@", __PRETTY_FUNCTION__, types);
     _supportedTypeIdentifiers = types;
 }
 
